# c_prj

./: CMakeLists.txt  Makefile  README.md  README.txt  make.m
cfg/: Makefile  makefile_rules.Darwin
doc/: Doxyfile_prj
exe/: CMakeLists.txt  Makefile  func.h  func1.c  func2.c  prj_main.c
inc/: getlib.h  logger.h  mexutil.h  optlist.h  params.h  tmp.h  util.h  utils.h
src/: CMakeLists.txt  Makefile
src/cutest/: AllTests.c  CMakeLists.txt  CuTestTest.c  Makefile  README.txt  index.html  make-tests.sh
src/exe/: CMakeLists.txt  Makefile  func.h  prj_main.c
src/getlib/: CMakeLists.txt  Cinteger.c  Clogical.c  Creal.c  Filename.c  Filename_ext.c  Gcommand.c  Gerr.c  Getnbl.c  Ginput.c  Gitem.c  Gsignal.c  Icommand.c  Index.c  Integer.c  Logical.c  Makefile  Makefile.old  Preproc.c  Putpromp.c  Real.c  Scommand.c  Strtrm.c  define.h  error.h  get_Util.c  getliba.h  getnb.h  globals.c  linteger.c  preproc.h  test.c  version.h  xcommand.c
src/mexdemo/: Contents.m  cell2sparse.c  hankel.c  kron2.c  sqdist2.c  toeplitz.c
src/mexdemo/example/: example_sqdist2.m
src/mexutil/: CMakeLists.txt  Makefile  mexutil.c
src/optlist/: CMakeLists.txt  Makefile  optlist.c  sample.c
src/util/: AllTests.c  CMakeLists.txt  Makefile  util_file.c  util_net.c  util_test.c
src/utils/: CMakeLists.txt  deadband.c  filter2.c  fix.c  interp.c  lag.c  leadlag.c  limit.c  load.c  logger.c  lowercase.c  matrix.c  mt19937.c  ra.c  randn.c  randu.c  roundz.c  row_vector_matrix_ops.c  sign.c  soddir.c  sodinv.c  strsub.c  trimit.c  vector.c  vector_operators.c  zlfi1u.c  zlfi2u.c  zlfi3u.c  ztable_load.c
src/utl/cutest/: Makefile
utl/: CMakeLists.txt  Makefile
utl/util/: AllTests.c  CMakeLists.txt  Makefile  util.h  util_math.c  util_net.c  util_test.c
